added updated TEST data, it was missing one required column

--- a/src/modules/feature_engeneering/Merging_weather_data_TEST.ipynb
+++ b/src/modules/feature_engeneering/Merging_weather_data_TEST.ipynb
@@ -21,7 +21,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_test = pd.read_csv(\"~/Desktop/DataDump/Flights_Weather_TEST.csv\", index_col = 'Unnamed: 0')"
+    "df_test = pd.read_csv(\"~/Desktop/DataDump/Flights_Weather_TEST.csv\", index_col = 'Unnamed: 0')\n",
+    "#df_test.columns"
    ]
   },
   {
@@ -47,7 +48,7 @@
    "outputs": [],
    "source": [
     "#Picking the features\n",
-    "columns_to_keep = [\"fl_date\", \"mkt_carrier\", \"op_carrier_fl_num\", \"origin\", \"dest\", \"dep_datetime\", \"arr_datetime\",\"dep_dayofweek\", \"arr_dayofweek\",\"op_unique_carrier\", \"tail_num\", \"crs_elapsed_time\", \"distance\",\n",
+    "columns_to_keep = [\"fl_date\", \"mkt_carrier\", \"mkt_carrier_fl_num\", \"origin\", \"dest\", \"dep_datetime\", \"arr_datetime\",\"dep_dayofweek\", \"arr_dayofweek\",\"op_unique_carrier\", \"tail_num\", \"crs_elapsed_time\", \"distance\",\n",
     "                  \"dep_Rain\",\"dep_Fog\",\"dep_Snow\",\"dep_Cold\", \"dep_Storm\", \"dep_Hail\", \"dep_Precipitation\",\n",
     "                   \"arr_Rain\", \"arr_Fog\", \"arr_Snow\", \"arr_Cold\", \"arr_Storm\", \"arr_Hail\", \"arr_Precipitation\", \n",
     "                  \"crs_dep_time\", \"crs_arr_time\"]\n",
@@ -104,7 +105,7 @@
        "      <th></th>\n",
        "      <th>fl_date</th>\n",
        "      <th>mkt_carrier</th>\n",
-       "      <th>op_carrier_fl_num</th>\n",
+       "      <th>mkt_carrier_fl_num</th>\n",
        "      <th>origin</th>\n",
        "      <th>dest</th>\n",
        "      <th>dep_datetime</th>\n",
@@ -396,18 +397,18 @@
        "</div>"
       ],
       "text/plain": [
-       "                        fl_date mkt_carrier  op_carrier_fl_num origin dest  \\\n",
-       "0       2020-01-01 00:00:00.000          WN               5888    ONT  SFO   \n",
-       "1       2020-01-01 00:00:00.000          WN               6276    ONT  SFO   \n",
-       "2       2020-01-01 00:00:00.000          WN               4598    ONT  SJC   \n",
-       "3       2020-01-01 00:00:00.000          WN               4761    ONT  SJC   \n",
-       "4       2020-01-01 00:00:00.000          WN               5162    ONT  SJC   \n",
-       "...                         ...         ...                ...    ...  ...   \n",
-       "148461  2020-01-07 00:00:00.000          DL               4813    DTW  JFK   \n",
-       "148462  2020-01-07 00:00:00.000          DL               4814    GSP  LGA   \n",
-       "148463  2020-01-07 00:00:00.000          DL               4815    ATL  XNA   \n",
-       "148464  2020-01-07 00:00:00.000          DL               4815    XNA  ATL   \n",
-       "148465  2020-01-07 00:00:00.000          DL               4816    PWM  LGA   \n",
+       "                        fl_date mkt_carrier  mkt_carrier_fl_num origin dest  \\\n",
+       "0       2020-01-01 00:00:00.000          WN                5888    ONT  SFO   \n",
+       "1       2020-01-01 00:00:00.000          WN                6276    ONT  SFO   \n",
+       "2       2020-01-01 00:00:00.000          WN                4598    ONT  SJC   \n",
+       "3       2020-01-01 00:00:00.000          WN                4761    ONT  SJC   \n",
+       "4       2020-01-01 00:00:00.000          WN                5162    ONT  SJC   \n",
+       "...                         ...         ...                 ...    ...  ...   \n",
+       "148461  2020-01-07 00:00:00.000          DL                4813    DTW  JFK   \n",
+       "148462  2020-01-07 00:00:00.000          DL                4814    GSP  LGA   \n",
+       "148463  2020-01-07 00:00:00.000          DL                4815    ATL  XNA   \n",
+       "148464  2020-01-07 00:00:00.000          DL                4815    XNA  ATL   \n",
+       "148465  2020-01-07 00:00:00.000          DL                4816    PWM  LGA   \n",
        "\n",
        "              dep_datetime        arr_datetime  dep_dayofweek  arr_dayofweek  \\\n",
        "0      2020-01-01 18:10:00 2020-01-01 19:45:00              2              2   \n",
@@ -535,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "bd4f48b4-bf2d-46a5-ae00-f9cdef8f5a92",
    "metadata": {
     "tags": []
@@ -546,39 +547,64 @@
      "output_type": "stream",
      "text": [
       "Remaining = 96.63%\n",
-      "Time elapsed 159.68 seconds\n",
+      "Time elapsed 151.93 seconds\n",
       "Remaining = 93.26%\n",
-      "Time elapsed 319.84 seconds\n",
+      "Time elapsed 302.46 seconds\n",
       "Remaining = 89.9%\n",
-      "Time elapsed 479.46 seconds\n",
+      "Time elapsed 451.61 seconds\n",
       "Remaining = 86.53%\n",
-      "Time elapsed 640.24 seconds\n",
+      "Time elapsed 600.74 seconds\n",
       "Remaining = 83.16%\n",
-      "Time elapsed 800.2 seconds\n",
+      "Time elapsed 750.71 seconds\n",
       "Remaining = 79.79%\n",
-      "Time elapsed 960.65 seconds\n",
+      "Time elapsed 900.99 seconds\n",
       "Remaining = 76.43%\n",
-      "Time elapsed 1122.41 seconds\n",
+      "Time elapsed 1051.55 seconds\n",
       "Remaining = 73.06%\n",
-      "Time elapsed 1284.45 seconds\n",
+      "Time elapsed 1200.98 seconds\n",
       "Remaining = 69.69%\n",
-      "Time elapsed 1446.05 seconds\n",
+      "Time elapsed 1351.21 seconds\n",
       "Remaining = 66.32%\n",
-      "Time elapsed 1605.97 seconds\n",
+      "Time elapsed 1500.75 seconds\n",
       "Remaining = 62.95%\n",
-      "Time elapsed 1765.1 seconds\n",
+      "Time elapsed 1650.13 seconds\n",
       "Remaining = 59.59%\n",
-      "Time elapsed 1924.02 seconds\n",
+      "Time elapsed 1800.52 seconds\n",
       "Remaining = 56.22%\n",
-      "Time elapsed 2084.1 seconds\n",
+      "Time elapsed 1950.25 seconds\n",
       "Remaining = 52.85%\n",
-      "Time elapsed 2244.38 seconds\n",
+      "Time elapsed 2099.6 seconds\n",
       "Remaining = 49.48%\n",
-      "Time elapsed 2403.66 seconds\n",
+      "Time elapsed 2250.48 seconds\n",
       "Remaining = 46.12%\n",
-      "Time elapsed 2564.2 seconds\n",
+      "Time elapsed 2400.58 seconds\n",
       "Remaining = 42.75%\n",
-      "Time elapsed 2726.14 seconds\n"
+      "Time elapsed 2552.01 seconds\n",
+      "Remaining = 39.38%\n",
+      "Time elapsed 2702.69 seconds\n",
+      "Remaining = 36.01%\n",
+      "Time elapsed 2853.01 seconds\n",
+      "Remaining = 32.64%\n",
+      "Time elapsed 3002.79 seconds\n",
+      "Remaining = 29.28%\n",
+      "Time elapsed 3152.06 seconds\n",
+      "Remaining = 25.91%\n",
+      "Time elapsed 3301.68 seconds\n",
+      "Remaining = 22.54%\n",
+      "Time elapsed 3451.01 seconds\n",
+      "Remaining = 19.17%\n",
+      "Time elapsed 3600.37 seconds\n",
+      "Remaining = 15.81%\n",
+      "Time elapsed 3750.62 seconds\n",
+      "Remaining = 12.44%\n",
+      "Time elapsed 3900.03 seconds\n",
+      "Remaining = 9.07%\n",
+      "Time elapsed 4051.31 seconds\n",
+      "Remaining = 5.7%\n",
+      "Time elapsed 4201.16 seconds\n",
+      "Remaining = 2.33%\n",
+      "Time elapsed 4350.96 seconds\n",
+      "Time elapsed 4454.34 seconds\n"
      ]
     }
    ],
@@ -588,20 +614,238 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "eed54928-71d4-4427-8f9c-f106346154c3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(148466, 31)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "db90f5ef-e732-4f24-8c48-507ee0babcb9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fl_date</th>\n",
+       "      <th>mkt_carrier</th>\n",
+       "      <th>mkt_carrier_fl_num</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>dest</th>\n",
+       "      <th>dep_datetime</th>\n",
+       "      <th>arr_datetime</th>\n",
+       "      <th>dep_dayofweek</th>\n",
+       "      <th>arr_dayofweek</th>\n",
+       "      <th>op_unique_carrier</th>\n",
+       "      <th>...</th>\n",
+       "      <th>arr_Fog</th>\n",
+       "      <th>arr_Snow</th>\n",
+       "      <th>arr_Cold</th>\n",
+       "      <th>arr_Storm</th>\n",
+       "      <th>arr_Hail</th>\n",
+       "      <th>arr_Precipitation</th>\n",
+       "      <th>crs_dep_time</th>\n",
+       "      <th>crs_arr_time</th>\n",
+       "      <th>flights_origin</th>\n",
+       "      <th>flights_dest</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-01-01 00:00:00.000</td>\n",
+       "      <td>WN</td>\n",
+       "      <td>5888</td>\n",
+       "      <td>ONT</td>\n",
+       "      <td>SFO</td>\n",
+       "      <td>2020-01-01 18:10:00</td>\n",
+       "      <td>2020-01-01 19:45:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>WN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1810</td>\n",
+       "      <td>1945</td>\n",
+       "      <td>13</td>\n",
+       "      <td>107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-01-01 00:00:00.000</td>\n",
+       "      <td>WN</td>\n",
+       "      <td>6276</td>\n",
+       "      <td>ONT</td>\n",
+       "      <td>SFO</td>\n",
+       "      <td>2020-01-01 11:50:00</td>\n",
+       "      <td>2020-01-01 13:20:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>WN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1150</td>\n",
+       "      <td>1320</td>\n",
+       "      <td>15</td>\n",
+       "      <td>106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-01-01 00:00:00.000</td>\n",
+       "      <td>WN</td>\n",
+       "      <td>4598</td>\n",
+       "      <td>ONT</td>\n",
+       "      <td>SJC</td>\n",
+       "      <td>2020-01-01 20:20:00</td>\n",
+       "      <td>2020-01-01 21:30:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>WN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>2130</td>\n",
+       "      <td>12</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-01-01 00:00:00.000</td>\n",
+       "      <td>WN</td>\n",
+       "      <td>4761</td>\n",
+       "      <td>ONT</td>\n",
+       "      <td>SJC</td>\n",
+       "      <td>2020-01-01 13:40:00</td>\n",
+       "      <td>2020-01-01 14:55:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>WN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1340</td>\n",
+       "      <td>1455</td>\n",
+       "      <td>14</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-01-01 00:00:00.000</td>\n",
+       "      <td>WN</td>\n",
+       "      <td>5162</td>\n",
+       "      <td>ONT</td>\n",
+       "      <td>SJC</td>\n",
+       "      <td>2020-01-01 09:15:00</td>\n",
+       "      <td>2020-01-01 10:35:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>WN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>915</td>\n",
+       "      <td>1035</td>\n",
+       "      <td>19</td>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 31 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   fl_date mkt_carrier  mkt_carrier_fl_num origin dest  \\\n",
+       "0  2020-01-01 00:00:00.000          WN                5888    ONT  SFO   \n",
+       "1  2020-01-01 00:00:00.000          WN                6276    ONT  SFO   \n",
+       "2  2020-01-01 00:00:00.000          WN                4598    ONT  SJC   \n",
+       "3  2020-01-01 00:00:00.000          WN                4761    ONT  SJC   \n",
+       "4  2020-01-01 00:00:00.000          WN                5162    ONT  SJC   \n",
+       "\n",
+       "         dep_datetime        arr_datetime  dep_dayofweek  arr_dayofweek  \\\n",
+       "0 2020-01-01 18:10:00 2020-01-01 19:45:00              2              2   \n",
+       "1 2020-01-01 11:50:00 2020-01-01 13:20:00              2              2   \n",
+       "2 2020-01-01 20:20:00 2020-01-01 21:30:00              2              2   \n",
+       "3 2020-01-01 13:40:00 2020-01-01 14:55:00              2              2   \n",
+       "4 2020-01-01 09:15:00 2020-01-01 10:35:00              2              2   \n",
+       "\n",
+       "  op_unique_carrier  ... arr_Fog  arr_Snow  arr_Cold  arr_Storm  arr_Hail  \\\n",
+       "0                WN  ...     1.0       3.0       0.0        0.0       0.0   \n",
+       "1                WN  ...     1.0       3.0       0.0        0.0       0.0   \n",
+       "2                WN  ...     1.0       3.0       0.0        0.0       0.0   \n",
+       "3                WN  ...     1.0       3.0       0.0        0.0       0.0   \n",
+       "4                WN  ...     1.0       3.0       0.0        0.0       0.0   \n",
+       "\n",
+       "   arr_Precipitation  crs_dep_time  crs_arr_time  flights_origin  flights_dest  \n",
+       "0                0.0          1810          1945              13           107  \n",
+       "1                0.0          1150          1320              15           106  \n",
+       "2                0.0          2020          2130              12            44  \n",
+       "3                0.0          1340          1455              14            40  \n",
+       "4                0.0           915          1035              19            51  \n",
+       "\n",
+       "[5 rows x 31 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.head()"
    ]
@@ -609,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93250d5a-09b1-4c91-bb0c-b043fe0055f9",
+   "id": "d624f86c-688f-4b6d-882c-7b4c2df22d4b",
    "metadata": {},
    "outputs": [],
    "source": [
