added the final predictions

--- a/src/modules/models/creating_predictions.ipynb
+++ b/src/modules/models/creating_predictions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "b1d4c990-671d-4ce0-a083-e06188ce5ab4",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "e1bc6b63-ea3b-49e9-8e7e-e6914539e5ce",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "f66073b7-480d-41b0-85db-1c09427e79dd",
    "metadata": {},
    "outputs": [],
@@ -41,17 +41,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "id": "6e08d188-01ad-463b-862e-2fc35ff75b38",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(148371, 31)"
+       "Index(['fl_date', 'mkt_carrier', 'mkt_carrier_fl_num', 'origin', 'dest',\n",
+       "       'dep_datetime', 'arr_datetime', 'dep_dayofweek', 'arr_dayofweek',\n",
+       "       'op_unique_carrier', 'tail_num', 'crs_elapsed_time', 'distance',\n",
+       "       'dep_Rain', 'dep_Fog', 'dep_Snow', 'dep_Cold', 'dep_Storm', 'dep_Hail',\n",
+       "       'dep_Precipitation', 'arr_Rain', 'arr_Fog', 'arr_Snow', 'arr_Cold',\n",
+       "       'arr_Storm', 'arr_Hail', 'arr_Precipitation', 'crs_dep_time',\n",
+       "       'crs_arr_time', 'flights_origin', 'flights_dest'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +68,7 @@
     "url = \"https://raw.githubusercontent.com/joao-l-rossi/LHL-Predicting-Flight-Delays/main/data/Flights_TEST.csv\"\n",
     "dataset_TEST = pd.read_csv(url)\n",
     "dataset_TEST = dataset_TEST.dropna().reset_index(drop=True)\n",
-    "dataset_TEST.shape"
+    "dataset_TEST.columns"
    ]
   },
   {
@@ -148,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "submission = pd.concat([dataset_TEST[[\"fl_date\", \"mkt_carrier\", \"op_carrier_fl_num\", \"origin\", \"dest\"]],pd.DataFrame(y_pred) ], axis = 1)"
+    "submission = pd.concat([dataset_TEST[[\"fl_date\", \"mkt_carrier\", \"mkt_carrier_fl_num\", \"origin\", \"dest\"]],pd.DataFrame(y_pred) ], axis = 1)"
    ]
   },
   {
