added ppt on exploratory questions and final predictions

--- a/src/modules/models/creating_predictions.ipynb
+++ b/src/modules/models/creating_predictions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "b1d4c990-671d-4ce0-a083-e06188ce5ab4",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "id": "dd1be31f-cebd-44e6-b963-7154fd39332c",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "id": "618e79b1-b5ed-4eb1-939f-ea5892aed5f0",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "id": "bda26eca-f89d-49b9-a611-a81d8d09aa4d",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
        "(148371, 14)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "id": "fee4eaab-55ed-4338-82bd-330788f8c355",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
        "(148371,)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "id": "bee33a7e-aade-4e81-b484-d935e89e9337",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 17,
    "id": "46064fa2-cdc7-4fb8-a03e-13c6e23cb3aa",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
        "      <th></th>\n",
        "      <th>fl_date</th>\n",
        "      <th>mkt_carrier</th>\n",
-       "      <th>op_carrier_fl_num</th>\n",
+       "      <th>mkt_carrier_fl_num</th>\n",
        "      <th>origin</th>\n",
        "      <th>dest</th>\n",
        "      <th>predicted_delay</th>\n",
@@ -299,18 +299,18 @@
        "</div>"
       ],
       "text/plain": [
-       "                        fl_date mkt_carrier  op_carrier_fl_num origin dest  \\\n",
-       "0       2020-01-01 00:00:00.000          WN               5888    ONT  SFO   \n",
-       "1       2020-01-01 00:00:00.000          WN               6276    ONT  SFO   \n",
-       "2       2020-01-01 00:00:00.000          WN               4598    ONT  SJC   \n",
-       "3       2020-01-01 00:00:00.000          WN               4761    ONT  SJC   \n",
-       "4       2020-01-01 00:00:00.000          WN               5162    ONT  SJC   \n",
-       "...                         ...         ...                ...    ...  ...   \n",
-       "148366  2020-01-07 00:00:00.000          DL               4813    DTW  JFK   \n",
-       "148367  2020-01-07 00:00:00.000          DL               4814    GSP  LGA   \n",
-       "148368  2020-01-07 00:00:00.000          DL               4815    ATL  XNA   \n",
-       "148369  2020-01-07 00:00:00.000          DL               4815    XNA  ATL   \n",
-       "148370  2020-01-07 00:00:00.000          DL               4816    PWM  LGA   \n",
+       "                        fl_date mkt_carrier  mkt_carrier_fl_num origin dest  \\\n",
+       "0       2020-01-01 00:00:00.000          WN                5888    ONT  SFO   \n",
+       "1       2020-01-01 00:00:00.000          WN                6276    ONT  SFO   \n",
+       "2       2020-01-01 00:00:00.000          WN                4598    ONT  SJC   \n",
+       "3       2020-01-01 00:00:00.000          WN                4761    ONT  SJC   \n",
+       "4       2020-01-01 00:00:00.000          WN                5162    ONT  SJC   \n",
+       "...                         ...         ...                 ...    ...  ...   \n",
+       "148366  2020-01-07 00:00:00.000          DL                4813    DTW  JFK   \n",
+       "148367  2020-01-07 00:00:00.000          DL                4814    GSP  LGA   \n",
+       "148368  2020-01-07 00:00:00.000          DL                4815    ATL  XNA   \n",
+       "148369  2020-01-07 00:00:00.000          DL                4815    XNA  ATL   \n",
+       "148370  2020-01-07 00:00:00.000          DL                4816    PWM  LGA   \n",
        "\n",
        "        predicted_delay  \n",
        "0              6.258602  \n",
@@ -328,7 +328,7 @@
        "[148371 rows x 6 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 18,
    "id": "3b817866-d695-4cbb-abb5-a18280d043c8",
    "metadata": {},
    "outputs": [],
